# vexy-mkdocs-strip-number-prefix

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  TODO.md  WORK.md  WORKFLOW_UPDATES.md  build_docs.py  llms.txt  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: 404.html  index.html  sitemap.xml
docs/advanced-features/admonitions/: index.html
docs/advanced-features/code-blocks/: index.html
docs/advanced-features/images/: index.html
docs/advanced-features/tables/: index.html
docs/basic-syntax/headings/: index.html
docs/basic-syntax/links/: index.html
docs/basic-syntax/lists/: index.html
docs/basic-syntax/text-formatting/: index.html
docs/examples/best-practices/: index.html
docs/examples/common-patterns/: index.html
docs/examples/real-world-usage/: index.html
docs/getting-started/configuration/: index.html
docs/getting-started/installation/: index.html
docs/getting-started/introduction/: index.html
docs/search/: search_index.json
scripts/: build.sh  dev.sh  release.sh  test.sh
src/mkdocs_strip_number_prefix/: __init__.py  plugin.py
src_docs/: index.md
src_docs/010--getting-started/: 010--introduction.md  020--installation.md  030--configuration.md
src_docs/020--basic-syntax/: 010--headings.md  020--text-formatting.md  030--lists.md  040--links.md
src_docs/030--advanced-features/: 010--code-blocks.md  020--tables.md  030--admonitions.md  040--images.md
src_docs/040--examples/: 010--real-world-usage.md  020--common-patterns.md  030--best-practices.md
tests/: test_plugin.py
